# digest

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
src/: main.rs
